// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSeverity component tests severity - danger 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fbacaa",
        "borderColor": "transparent",
        "borderRadius": 14,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 14,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#45120e",
        "fontFamily": "TT Fellows",
        "fontSize": 16,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - info 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#aad7fb",
        "borderColor": "transparent",
        "borderRadius": 14,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 14,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#0e2a45",
        "fontFamily": "TT Fellows",
        "fontSize": 16,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - success 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#aafbb7",
        "borderColor": "transparent",
        "borderRadius": 14,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 14,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#0e4514",
        "fontFamily": "TT Fellows",
        "fontSize": 16,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;

exports[`ButtonSeverity component tests severity - warning 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#fddeaa",
        "borderColor": "transparent",
        "borderRadius": 14,
        "borderWidth": 1,
        "flexDirection": "row",
        "gap": 8,
        "height": "auto",
        "justifyContent": "center",
        "paddingHorizontal": 14,
        "paddingVertical": 8,
      },
      false,
    ]
  }
>
  <Text
    style={
      {
        "color": "#4f3709",
        "fontFamily": "TT Fellows",
        "fontSize": 16,
        "fontWeight": 600,
        "includeFontPadding": false,
        "verticalAlign": "middle",
      }
    }
    testID="Button_Text"
  >
    Button
  </Text>
</View>
`;
